# monorepo

./: .bazelrc  .gitignore  Jenkinsfile  MODULE.bazel  README.md  ci-research.md  pom.xml
.buildkite/: generate_pipeline.py  pipeline.yml
.buildkite/hooks/: pre-command
components/sample/: README.md  pom.xml
components/sample/src/main/java/com/example/monorepo/samplejava/: App.java  Greeting.java
components/sample/src/test/java/com/example/monorepo/samplejava/: GreetingTest.java
lib/sample/: BUILD.bazel
lib/sample/include/sample_cpp/: greeting.h
lib/sample/src/: greeting.cc
lib/sample/tests/: greeting_test.cc
progs/app/: BUILD.bazel
progs/app/src/: main.cc
tools/buildifier/: check.bat  check.sh
