module(
    name = "sample_cpp",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.5.1.2",
    dev_dependency = True,
)
